--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -38,7 +38,7 @@ jobs:
           conda activate zarr-env
           python -m pip install --upgrade pip
           python -m pip install -U pip setuptools wheel
-          python -m pip install -rrequirements_dev_minimal.txt numpy${{ matrix.numpy_version}} -rrequirements_dev_optional.txt
+          python -m pip install -r requirements_dev_numpy.txt -r requirements_dev_minimal.txt -r requirements_dev_optional.txt
           python -m pip install -e .
           python -m pip freeze
       - name: Run Tests
