--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Create Conda environment with the rights deps
         shell: bash -l {0}
         run: |
-          conda create -n zarr-env python==${{matrix.python-version}} numcodecs==0.6.4 pip
+          conda create -n zarr-env python==${{matrix.python-version}} numcodecs==0.6.4 pip nodejs
       - name: Install dependencies
         shell: bash -l {0}
         run: |
@@ -41,11 +41,16 @@ jobs:
           python -m pip install -r requirements_dev_numpy.txt -r requirements_dev_minimal.txt -r requirements_dev_optional.txt
           python -m pip install -e .
           python -m pip freeze
+          npm install -g azurite
       - name: Run Tests
         shell: bash -l {0}
         run: |
           conda activate zarr-env
+          mkdir ~/blob_emulator
+          azurite -l ~/blob_emulator --debug debug.log 2>&1 > stdouterr.log &
           pytest
+        env:
+          ZARR_TEST_ABS: 1
       - name: Conda info
         shell: bash -l {0}
         run: conda info
