Restrict flake8 to just zarr/

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -83,7 +83,7 @@ jobs:
       shell: "bash -l {0}"
       run: |
         conda activate zarr-env
-        flake8
+        flake8 zarr
         mypy
 
     
