--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -18,5 +18,4 @@ pytest-doctestplus==0.4.0
 h5py==2.10.0
 s3fs==0.5.1; python_version > '3.6'
 fsspec==0.8.4; python_version > '3.6'
-moto>=1.3.14; python_version > '3.6'
-flask
+moto[server]>=1.3.14; python_version > '3.6'
