--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -5,7 +5,7 @@ lmdb==0.97; sys_platform != 'win32'
 ipytree==0.1.3
 # optional library requirements for services
 # don't let pyup change pinning for azure-storage-blob, need to pin to older
-# version to get compatibility with azure storage emulator on appveyor
+# version to get compatibility with azure storage emulator on appveyor (FIXME)
 azure-storage-blob==2.0.1 # pyup: ignore
 redis==3.3.8
 pymongo==3.9.0
