--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -17,6 +17,7 @@ coverage
 flake8==3.9.2
 pytest-cov==2.12.1
 pytest-doctestplus==0.11.0
+pytest-timeout==1.4.2
 h5py==3.4.0
 fsspec[s3]==2021.9.0
 moto[server]>=1.3.14
