--- a/requirements_dev_minimal.txt
+++ b/requirements_dev_minimal.txt
@@ -5,4 +5,4 @@ numcodecs==0.7.3
 msgpack-python==0.5.6
 setuptools-scm==6.0.1
 # test requirements
-pytest==5.2.0; python_version > '3.0'
+pytest==5.2.0
