--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -8,6 +8,7 @@ ipytree==0.2.1
 # version to get compatibility with azure storage emulator on appveyor (FIXME)
 azure-storage-blob==12.5.0 # pyup: ignore
 redis==3.5.3
+types-redis
 pymongo==3.11.4
 # optional test requirements
 tox==3.23.1
@@ -16,6 +17,6 @@ flake8==3.9.2
 pytest-cov==2.12.0
 pytest-doctestplus==0.4.0
 h5py==2.10.0
-s3fs==2021.5.0; python_version > '3.6'
-fsspec==2021.5.0; python_version > '3.6'
-moto[server]>=1.3.14; python_version > '3.6'
+s3fs==2021.5.0
+fsspec==2021.5.0
+moto[server]>=1.3.14
