Drop the additional numpy 1.16 test
see:
 * #774 which drops Python 3.6
 * #749 which bumps h5py to 3.2

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8]
-        numpy_version: ['==1.16.4', '']
+        numpy_version: ['']
     services:
       redis:
         image: redis
