Test numpy 1.17 as the 'old' version

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8]
-        numpy_version: ['']
+        numpy_version: ['', '==1.17.*']
     services:
       redis:
         image: redis
