--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -18,5 +18,5 @@ pytest-cov==2.12.1
 pytest-doctestplus==0.10.0
 h5py==3.2.1
 s3fs==2021.7.0
-fsspec==2021.7.0
+git+https://github.com/intake/filesystem_spec.git/@master#egg=fsspec
 moto[server]>=1.3.14
