--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -18,7 +18,5 @@ flake8==3.9.2
 pytest-cov==2.12.1
 pytest-doctestplus==0.10.1
 h5py==3.4.0
-s3fs==2021.6.0
-fsspec==2021.6.0
-aiobotocore!=1.4.0
+fsspec[s3]==2021.08.1
 moto[server]>=1.3.14
