--- a/.github/workflows/minimal.yml
+++ b/.github/workflows/minimal.yml
@@ -24,5 +24,5 @@ jobs:
       shell: "bash -l {0}"
       run: |
         conda activate minimal
-        python -m pip install -e .
+        python -m pip install .
         pytest -svx
