--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,7 +57,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -U pip setuptools wheel codecov line_profiler
         python -m pip install -rrequirements_dev_minimal.txt numpy${{ matrix.numpy_version}} -rrequirements_dev_optional.txt pymongo redis
-        python -m pip install -e . 
+        python -m pip install .
         python -m pip freeze
     - name: Tests
       shell: "bash -l {0}"
