--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -39,7 +39,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -U pip setuptools wheel
           python -m pip install -r requirements_dev_numpy.txt -r requirements_dev_minimal.txt -r requirements_dev_optional.txt
-          python -m pip install -e .
+          python -m pip install .
           python -m pip freeze
           npm install -g azurite
       - name: Run Tests
