--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,6 +17,9 @@ jobs:
       matrix:
         python-version: [3.7, 3.8, 3.9]
         numpy_version: ['!=1.21.0', '==1.17.*']
+        exclude:
+          - python-version: 3.9
+          - numpy_version: '==1.17.*'
     services:
       redis:
         image: redis
