--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: True
       matrix:
-        python-version: ["3.8"]
+        python-version: ["3.8", "3.9"]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -31,7 +31,7 @@ jobs:
       - name: Create Conda environment with the rights deps
         shell: bash -l {0}
         run: |
-          conda create -n zarr-env python==${{matrix.python-version}} numcodecs==0.6.4 pip nodejs
+          conda create -n zarr-env python==${{matrix.python-version}} numcodecs pip nodejs
       - name: Install dependencies
         shell: bash -l {0}
         run: |
