--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -19,5 +19,6 @@ pytest-cov==3.0.0
 pytest-doctestplus==0.11.2
 pytest-timeout==2.0.2
 h5py==3.6.0
-fsspec[s3]==2021.11.1
+fsspec==2021.11.1
+s3fs==2021.11.1
 moto[server]>=1.3.14
