--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - wheel
   - numcodecs >= 0.6.4
-  - numpy >= 1.7
+  - numpy == 1.20.3
   - pip
   - pip:
     - asciitree
