--- a/requirements_dev_minimal.txt
+++ b/requirements_dev_minimal.txt
@@ -1,6 +1,6 @@
 # library requirements
 asciitree==0.3.3
-fasteners<0.17
+fasteners==0.17.3
 numcodecs==0.9.1
 msgpack-python==0.5.6
 setuptools-scm==6.4.2
