Set write_empty_chunks to default to False (#853)
* Set write_empty_chunks to default to False

* Add release entry for write_empty_chunks default

* add Empty chunks section to tutorial.rst

* add benchmarky example

* proper formatting of code block

* Fix abstore deprecated strings

* Also catch ValueError in all_equal

The call to `np.any(array)` in zarr.util.all_equal triggers the
following ValueError:

```
>       return ufunc.reduce(obj, axis, dtype, out, **passkwargs)
E       ValueError: invalid literal for int() with base 10: 'baz'
```

Extending the catch block allows test_array_with_categorize_filter
to pass, but it's unclear if this points to a deeper issue.

* Add --timeout argument to all uses of pytest

* Pin fasteners to 0.16.3 (see #952)

Co-authored-by: Davis Vann Bennett <davis.v.bennett@gmail.com>
Co-authored-by: Josh Moore <j.a.moore@dundee.ac.uk>
Co-authored-by: jmoore <josh@glencoesoftware.com>

--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - pip
   - pip:
     - asciitree
-    - fasteners
+    - fasteners == 0.16.3
     - pytest
+    - pytest-timeout
     - setuptools_scm
