--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - pip
   - pip:
     - asciitree
-    - fasteners == 0.16.3
+    - fasteners
     - pytest
     - pytest-timeout
     - setuptools_scm
