CI: use numpy>=1.21.* for `mypy` check

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -88,6 +88,7 @@ jobs:
       run: |
         conda activate zarr-env
         flake8 zarr
+        python -m pip install numpy>=1.21.*
         mypy zarr
 
 
