--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10, '3.11.0-alpha - 3.11.0']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11.0-alpha - 3.11.0']
         numpy_version: ['!=1.21.0', '==1.17.*']
         exclude:
           - python-version: 3.9
