Activate Py 3.10 builds (#1027)
* Activate Py 3.10 and 3.11 beta

* Fix quotes of versions

* Also quote exclusion

Co-authored-by: jakirkham <jakirkham@gmail.com>

* Try explicit beta1

* Use "beta.1"

see versions file:
https://github.com/actions/python-versions/blob/main/versions-manifest.json

* Migrate to setup-python

* Remove 3.11

Co-authored-by: jakirkham <jakirkham@gmail.com>

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,10 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ['3.7', '3.8', '3.9', '3.10']
         numpy_version: ['!=1.21.0', '==1.17.*']
         exclude:
           - python-version: 3.9
+            numpy_version: '==1.17.*'
+          - python-version: '3.10'
             numpy_version: '==1.17.*'
     services:
       redis:
