Move `master` to `main`

--- a/.github/workflows/Pre-commit-hooks.yml
+++ b/.github/workflows/Pre-commit-hooks.yml
@@ -4,10 +4,10 @@ name: pre-commit
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow pull request events but only for the master branch
+  # Triggers the workflow pull request events but only for the main branch
   pull_request:
   push:
-    branches: [master]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
