--- a/codecov.yml
+++ b/codecov.yml
@@ -12,4 +12,4 @@ comment:
   behavior: default
   require_changes: true  # if true: only post the comment if coverage changes
   branches:               # branch names that can post comment
-    - "master"
+    - "main"
