--- a/.github/workflows/minimal.yml
+++ b/.github/workflows/minimal.yml
@@ -4,9 +4,9 @@ name: Minimal installation
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   minimum_build:
