--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,12 +16,10 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10']
-        numpy_version: ['!=1.21.0', '==1.17.*']
+        numpy_version: ['>=1.22.0', '==1.20.*']
         exclude:
-          - python-version: 3.9
-            numpy_version: '==1.17.*'
           - python-version: '3.10'
-            numpy_version: '==1.17.*'
+            numpy_version: '==1.20.*'
     services:
       redis:
         image: redis
@@ -39,7 +37,7 @@ jobs:
           - 27017:27017
     steps:
     - uses: actions/checkout@v2
-      with: 
+      with:
         fetch-depth: 0
     - name: Setup Miniconda
       uses: conda-incubator/setup-miniconda@master
@@ -66,7 +64,7 @@ jobs:
         python -m pip freeze
     - name: Tests
       shell: "bash -l {0}"
-      env: 
+      env:
         COVERAGE_FILE: .coverage.${{matrix.python-version}}.${{matrix.numpy_version}}
         ZARR_TEST_ABS: 1
         ZARR_TEST_MONGO: 1
@@ -92,4 +90,4 @@ jobs:
         flake8 zarr
         mypy zarr
 
-    
+
