--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
-name: Bug Report
-description: File a bug report
+name: 🐛 File a bug report
+description: X's behavior is deviating from its documented behavior.
 labels: ["bug"]
 body:
   - type: markdown
