Make python-version match for pre-commits

--- a/.github/workflows/Pre-commit-hooks.yml
+++ b/.github/workflows/Pre-commit-hooks.yml
@@ -23,6 +23,8 @@ jobs:
       - uses: actions/checkout@v3
       #setting up Python v3.0.0
       - uses: actions/setup-python@v3.0.0
+        with:
+          python-version: '3.9'
       #using pre-commit latest i.e v2.0.3
       - uses: pre-commit/action@v2.0.3
       #Running pre-commit for all files
