Move to 20.04s LTS (focal)
Images for 22.04 (jammy) are not yet on
https://hub.docker.com/r/multiarch/ubuntu-core/tags

--- a/.github/workflows/bigendian.yml
+++ b/.github/workflows/bigendian.yml
@@ -21,6 +21,6 @@ jobs:
 
     - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
 
-    - uses: docker://multiarch/ubuntu-core:s390x-hirsute
+    - uses: docker://multiarch/ubuntu-core:s390x-focal
       with:
         args: 'bash .github/workflows/bigendian.sh'
