--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+ci:
+  autoupdate_commit_msg: "chore: update pre-commit hooks"
+  autofix_commit_msg: "style: pre-commit fixes"
 default_stages: [commit, push]
 default_language_version:
   python: python3.9
@@ -11,7 +14,21 @@ repos:
       ]
       exclude: ^(venv/|docs/)
       types: ['python']
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.1.0
+    hooks:
+      - id: codespell
+        args: ["-L", "ba,ihs,kake,nd,noe,nwo,te"]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
     - id: check-yaml
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.981
+    hooks:
+      - id: mypy
+        files: zarr
+        args: []
+        additional_dependencies:
+          - types-redis
+          - types-setuptools
