Tell codespell to skip `fixture`
This will avoid this kind of warnings:
	WARNING: Decoding file using encoding=utf-8 failed: fixture/8/0/11
	WARNING: Trying next encoding iso-8859-1

Seen in:
https://results.pre-commit.ci/run/github/48049137/1666036569.rj425j-vQKyvNbJ0CUHdcQ

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     rev: v2.1.0
     hooks:
       - id: codespell
-        args: ["-L", "ba,ihs,kake,nd,noe,nwo,te"]
+        args: ["-L", "ba,ihs,kake,nd,noe,nwo,te", "-S", "fixture"]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
