--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ ci:
   autofix_commit_msg: "style: pre-commit fixes"
 default_stages: [commit, push]
 default_language_version:
-  python: python3.9
+  python: python3
 repos:
   - repo: https://github.com/PyCQA/flake8
     rev: 3.8.2
@@ -18,7 +18,7 @@ repos:
     rev: v2.1.0
     hooks:
       - id: codespell
-        args: ["-L", "ba,ihs,kake,nd,noe,nwo,te"]
+        args: ["-L", "ba,ihs,kake,nd,noe,nwo,te", "-S", "fixture"]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
