--- a/.github/workflows/minimal.yml
+++ b/.github/workflows/minimal.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup Miniconda
-      uses: conda-incubator/setup-miniconda@master
+      uses: conda-incubator/setup-miniconda@v2
       with:
           channels: conda-forge
           environment-file: environment.yml
