--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@
 
 [tox]
 envlist = py38-npy{120,latest}, py39, py310, docs
+isolated_build = True
 
 [testenv]
 install_command = pip install --no-binary=numcodecs {opts} {packages}
