--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Setup Miniconda
-      uses: conda-incubator/setup-miniconda@master
+      uses: conda-incubator/setup-miniconda@v2.2.0
       with:
           channels: conda-forge
           python-version: ${{ matrix.python-version }}
