--- a/.github/workflows/windows-testing.yml
+++ b/.github/workflows/windows-testing.yml
@@ -52,6 +52,7 @@ jobs:
         env:
           ZARR_TEST_ABS: 1
           ZARR_V3_EXPERIMENTAL_API: 1
+          ZARR_V3_SHARDING: 1
       - name: Conda info
         shell: bash -l {0}
         run: conda info
