add ruff to precommit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,13 @@ default_stages: [commit, push]
 default_language_version:
   python: python3
 repos:
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+  # Ruff version.
+    rev: 'v0.0.223'
+    hooks:
+    - id: ruff
+      # Respect `exclude` and `extend-exclude` settings.
+      args: ["--force-exclude"] 
   - repo: https://github.com/PyCQA/flake8
     rev: 6.0.0
     hooks:
