--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,3 +112,18 @@ exclude = [
     "venv",
     "docs"
 ]
+
+[tool.black]
+line-length = 100
+exclude = '''
+/(
+    \.git
+  | \.mypy_cache
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | docs
+)/
+'''
