--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,6 +20,8 @@ jobs:
         exclude:
           - python-version: '3.10'
             numpy_version: '==1.20.*'
+          - python-version: '3.11'
+            numpy_version: '==1.20.*'
     services:
       redis:
         image: redis
