--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,15 +5,18 @@ default_stages: [commit, push]
 default_language_version:
   python: python3
 repos:
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+  # Ruff version.
+    rev: 'v0.0.224'
     hooks:
-    - id: flake8
-      args: [
-        --max-line-length=100
-      ]
-      exclude: ^(venv/|docs/)
-      types: ['python']
+    - id: ruff
+      # Respect `exclude` and `extend-exclude` settings.
+      args: ["--force-exclude"]
+  - repo: https://github.com/psf/black
+    rev: 22.12.0
+    hooks:
+    - id: black
+      language_version: python3.8
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.5
     hooks:
