--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -80,7 +80,7 @@ jobs:
         pytest --cov=zarr --cov-config=pyproject.toml --doctest-plus --cov-report xml --cov=./ --timeout=300
     - uses: codecov/codecov-action@v3
       with:
-        #token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           #files: ./coverage1.xml,./coverage2.xml # optional
           #flags: unittests # optional
           #name: codecov-umbrella # optional
