Use `-` in `setuptools_scm`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=64.0.0", "setuptools_scm>1.5.4"]
+requires = ["setuptools>=64.0.0", "setuptools-scm>1.5.4"]
 build-backend = "setuptools.build_meta"
 
 
