--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,7 @@ sphinx:
 
 python:
   install:
-    - requirements: requirements_rtfd.txt
     - method: pip
       path: .
+      extra_requirements:
+        - docs
