--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ maintainers = [
 requires-python = ">=3.8"
 dependencies = [
     'asciitree',
-    'numpy>=1.20',
+    'numpy>=1.20,!=1.21.0',
     'fasteners',
     'numcodecs>=0.10.0',
 ]
@@ -42,6 +42,16 @@ jupyter = [
     'notebook',
     'ipytree>=0.2.2',
     'ipywidgets>=8.0.0',
+]
+docs = [
+    'sphinx',
+    'sphinx_design',
+    'sphinx-issues',
+    'sphinx-copybutton',
+    'sphinx-rtd-theme',
+    'pydata-sphinx-theme',
+    'numpydoc',
+    'numcodecs[msgpack]',
 ]
 
 [project.urls]
