--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ jupyter = [
 ]
 docs = [
     'sphinx',
+    'sphinx-automodapi',
     'sphinx_design',
     'sphinx-issues',
     'sphinx-copybutton',
