--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,9 +119,10 @@ exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.8"
 ignore_missing_imports = true
-follow_imports = "silent"
+warn_unused_configs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
 
 [tool.pytest.ini_options]
 doctest_optionflags = [
